--- a/Ricksel Ramos/index.html
+++ b/Ricksel Ramos/index.html
@@ -2,101 +2,176 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Website</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <meta charset="UTF-8">
+  <title>Ricksel Yanejayriel B. Ramos | Portfolio Website</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header class="navbar">
+  <header>
+    <div class="header-container">
+      <div class="site-title">
         <h1>Portfolio Website</h1>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills/Activities</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+        <p>Ramos, Ricksel Yanejayriel B. | IT Student</p>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#Home">Home</a></li>
+          <li><a href="#about">About Me</a></li>
+          <li><a href="#education">Education</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#hobbies">Hobbies</a></li>
+          <li><a href="#contact">Contact & Motto</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-    <section id="home">
-        <div class="home-info">
-            <h2>Ramos, Ricksel Yanejayriel B.</h2>
-            <h3>BSIT-1C</h3>
-            <div class="img-box">
-                <div class="oval-background">
-                    <img src="img/prtty.jpg" alt="Profile Picture" class="profile-pic" />
-                </div>
-            </div>
-            <p>
-                Explore the fundamentals of computing, including hardware, software, programming, and networks. This
-                website is designed to provide easy-to-understand resources for beginners, helping you build a solid
-                foundation in computing.
-            </p>
-        </div>
-    </section>
+  <section id="personal">
+    <div class="image-block">
+      <img src="profile.jpg" alt="Ricksel's Photo" class="profile-img">
+    </div>
+    <div class="text-block">
+      <h2>🔹 Home</h2>
+      <ul>
+        <li><strong>Name:</strong> Ramos, Ricksel Yanejayriel B.</li>
+        <li><strong>Birthday:</strong> May 04, 2006</li>
+        <li><strong>Location:</strong> San Vicente, Abra de Ilog, Occidental Mindoro</li>
+        <li><strong>Email:</strong> ramosricksel01@gmail.com</li>
 
-    <section id="skills">
-        <h2 class="headings">Skills & Activities</h2>
-        <div class="gallery">
-            <img src="img/adaptability skills - Google Search_files/adaptabilitypicture1.jpg" alt="Adaptability" />
-            <img src="img/collaboration.png" alt="Collaboration" />
-            <img src="img/communicatioon.png" alt="Communication" />
-            <img src="img/Financial literacy.png" alt="Financial Literacy" />
-            <img src="img/self discipline.jpg" alt="Self Discipline" />
-            <img src="img/time management.png" alt="Time Management" />
-        </div>
-        <p>
-            This highlights academic projects and personal talents. The skills include personal abilities like
-            photography and design. This structure effectively presents both academic and personal development.
-        </p>
-    </section>
+      </ul>
+    </div>
+  </section>
 
-    <section id="about">
-        <h2 class="headings">About Me</h2>
-        <div id="pic">
-            <div class="oval-small">
-                <img src="img/riel.webp" alt="Uniform Photo" class="profile-pic-small" />
-            </div>
-            <div id="Intro">
-                <p>
-                    I am committed to learning, growing academically, and applying my knowledge to real-world
-                    challenges. Being a student is an exciting journey of personal growth. It comes with a diverse set
-                    of challenges and opportunities that shape our future. It's not just about accumulating knowledge,
-                    but also about learning how to learn, cultivating curiosity, and building a mindset that embraces
-                    growth.
-                </p>
-            </div>
-        </div>
-    </section>
+  <section id="about">
+    <div class="image-block">
+      <img src="profile.jpg" alt="Ricksel's Photo" class="profile-img">
+    </div>
+    <div class="text-block">
+      <h2>🔹 About Me</h2>
+      <p>Hello, I'm Ricksel Yanejayriel B. Ramos, a 19-year-old 2nd year Information Technology student at Occidental
+        Mindoro State College. I have a strong passion for technology and a genuine curiosity to learn more about how
+        software and computer systems work.</p>
+      <p>As an IT student, I really find myself busy sharpening my programming skills while exploring the different
+        areas of technology. Growing up really needs to learn many things, but the ones that are really interesting to
+        me even now are web development and software applications. Working on personal projects that would let me
+        understand how to build up functional and useful programs even if they are simple at first is something I enjoy
+        doing.</p>
+      <p>I believe that being a good developer means not only writing code but also solving problems logically and
+        creatively. I’m dedicated to improving my skills step-by-step, focusing on fundamentals like coding languages,
+        basic algorithms, and project management.</p>
+      <p>I like to stay updated with technology trends and enjoy experimenting with new programming tools and software.
+        Although I don’t consider myself an expert yet, I’m eager to take on challenges and gradually expand my
+        knowledge in IT.</p>
+      <p>I value teamwork and communication, which I practice during group projects and other activities. I’m excited
+        about the future and look forward to growing into a skilled IT professional who can contribute to meaningful
+        tech solutions.</p>
+    </div>
+  </section>
 
-    <section id="contact">
-        <h2 class="headings">Contact Me</h2>
-        <form id="contactForm" class="form">
-            <input type="text" name="name" class="input" placeholder="Enter Your Name" />
-            <input type="email" name="email" class="input" placeholder="Enter Your Email" />
-            <textarea name="msg" id="msg" cols="30" rows="10" placeholder="Enter Your Message"></textarea>
-            <input type="submit" value="SEND" id="Send" />
-        </form>
+  <section id="education">
+    <h2>🔹 Education</h2>
+    <table>
+      <tr>
+        <th>Year</th>
+        <th>School / University</th>
+        <th>Course</th>
+      </tr>
+      <tr>
+        <td>2024–2025</td>
+        <td>Occidental Mindoro State College</td>
+        <td>BS in Information Technology</td>
+      </tr>
+      <tr>
+        <td>2022–2024</td>
+        <td>Cabacao Senior High School</td>
+        <td>Humanities and Social Sciences</td>
+      </tr>
+    </table>
+  </section>
 
-        <div class="contact-info">
-            <div class="contact-item"><i class="fas fa-phone"></i> 09752094069</div>
-            <div class="contact-item"><i class="fas fa-envelope"></i> ramosricksel01@gmail.com</div>
-            <div class="contact-item"><i class="fab fa-facebook"></i> RI CK Sel</div>
-            <div class="contact-item"><i class="fab fa-tiktok"></i> pr'rty yane</div>
-            <div class="contact-item"><i class="fab fa-instagram"></i> itsme_yanej</div>
-        </div>
-    </section>
+  <section id="projects">
+    <h2>🔹 Projects</h2>
+    <table>
+      <tr>
+        <th>Title</th>
+        <th>Description</th>
+        <th>Tech Used</th>
+        <th>Link</th>
+      </tr>
+      <tr>
+        <td>Eco-lifehacks Website</td>
+        <td>Practical website that shares easy, everyday tips for living sustainably.</td>
+        <td>HTML, CSS, Figma, JavaScript</td>
+        <td><a href="#">GitHub</a></td>
+      </tr>
+      <tr>
+        <td>Portfolio Website</td>
+        <td>Personal website to showcase my education, projects, and skills.</td>
+        <td>HTML, CSS, JavaScript</td>
+        <td><a href="#">Live Site</a></td>
+      </tr>
+    </table>
+  </section>
 
-    <footer>
-        <p>&copy; 2025 Ramos, Ricksel Yanejayriel B.</p>
-    </footer>
+  <section id="skills">
+    <h2>🔹 Skills</h2>
+    <ul>
+      <li>Web Development</li>
+      <li>Adaptability</li>
+      <li>Time Management</li>
+      <li>Communication Skills</li>
+      <li>Teamwork & Collaboration</li>
+    </ul>
+    <div class="skills-images">
+      <img src="web-development" alt="web-development">
+      <img src="adaptability" alt="adaptability">
+      <img src="time-management" alt="time-management">
+      <img src="communication-skills" alt="communication-skills">
+      <img src="teamwork&collaboration" alt="teamwork&collaboration">
+    </div>
+  </section>
 
-    <script src="main.js"></script>
+  <section id="experience">
+    <h2>🔹 Work Experience</h2>
+    <ul>
+      <li>Part-time Student</li>
+      <li>ROTC (Reservist)</li>
+    </ul>
+  </section>
+
+  <section id="hobbies">
+    <h2>🔹 Hobbies & Interests</h2>
+    <ul>
+      <li>Dogs</li>
+      <li>Online Games</li>
+      <li>Dancing</li>
+      <li>Eating</li>
+      <li>Exploring Technology</li>
+    </ul>
+  </section>
+
+  <section id="contact">
+    <h2>🔹 Contact Information & Motto</h2>
+    <ul>
+      <li><strong>Mobile:</strong> 09752094069</li>
+      <li><strong>Facebook:</strong> <a href="https://facebook.com/ricksel.ramos.3"
+          target="_blank">https://facebook.com/ricksel.ramos.3</a></li>
+      <li><strong>Instagram:</strong> <a href="https://instagram.com/itsme_yanej"
+          target="_blank">https://instagram.com/itsme_yanej</a></li>
+      <li><strong>Gmail:</strong> <a href="ramosricksel01@gmail.com">ramosricksel01@gmail.com</a></li>
+    </ul>
+    <div class="motto">
+      <p><em>"Kung kaya nila, kaya ko rin. I may not be the best yet, but I’m willing to learn, grow, and prove that I
+          can achieve just as much — or even more."</em></p>
+    </div>
+  </section>
+
+  <footer>
+    <p>© 2025 Ricksel Yanejayriel B. Ramos</p>
+  </footer>
 </body>
 
 </html>
