--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
 
   <section id="personal">
     <div class="image-block">
-      <img src="profile.jpg" alt="Ricksel's Photo" class="profile-img">
+      <img src="img/profile.jpg" alt="Ricksel's Photo" class="profile-img">
     </div>
     <div class="text-block">
       <h2>🔹 Home</h2>
+      <p>Real progress. Real projects. Real me.</p>
+      <p>I'm Ricksel, and this portfolio is where I turn learning into action.</p>
+
       <ul>
-        <li><strong>Name:</strong> Ramos, Ricksel Yanejayriel B.</li>
-        <li><strong>Birthday:</strong> May 04, 2006</li>
+        <li><strong>Age:</strong> 19</li>
         <li><strong>Location:</strong> San Vicente, Abra de Ilog, Occidental Mindoro</li>
         <li><strong>Email:</strong> ramosricksel01@gmail.com</li>
 
@@ -45,31 +47,36 @@
     </div>
   </section>
 
-  <section id="about">
+  <section id="about-photo">
     <div class="image-block">
-      <img src="profile.jpg" alt="Ricksel's Photo" class="profile-img">
+      <img src="img/riel.png" alt="Ricksel in OMSC uniform">
     </div>
     <div class="text-block">
       <h2>🔹 About Me</h2>
       <p>Hello, I'm Ricksel Yanejayriel B. Ramos, a 19-year-old 2nd year Information Technology student at Occidental
         Mindoro State College. I have a strong passion for technology and a genuine curiosity to learn more about how
         software and computer systems work.</p>
+
       <p>As an IT student, I really find myself busy sharpening my programming skills while exploring the different
         areas of technology. Growing up really needs to learn many things, but the ones that are really interesting to
         me even now are web development and software applications. Working on personal projects that would let me
         understand how to build up functional and useful programs even if they are simple at first is something I enjoy
         doing.</p>
+
       <p>I believe that being a good developer means not only writing code but also solving problems logically and
         creatively. I’m dedicated to improving my skills step-by-step, focusing on fundamentals like coding languages,
         basic algorithms, and project management.</p>
+
       <p>I like to stay updated with technology trends and enjoy experimenting with new programming tools and software.
         Although I don’t consider myself an expert yet, I’m eager to take on challenges and gradually expand my
         knowledge in IT.</p>
+
       <p>I value teamwork and communication, which I practice during group projects and other activities. I’m excited
         about the future and look forward to growing into a skilled IT professional who can contribute to meaningful
         tech solutions.</p>
     </div>
   </section>
+
 
   <section id="education">
     <h2>🔹 Education</h2>
@@ -118,21 +125,30 @@
 
   <section id="skills">
     <h2>🔹 Skills</h2>
-    <ul>
-      <li>Web Development</li>
-      <li>Adaptability</li>
-      <li>Time Management</li>
-      <li>Communication Skills</li>
-      <li>Teamwork & Collaboration</li>
-    </ul>
     <div class="skills-images">
-      <img src="web-development" alt="web-development">
-      <img src="adaptability" alt="adaptability">
-      <img src="time-management" alt="time-management">
-      <img src="communication-skills" alt="communication-skills">
-      <img src="teamwork&collaboration" alt="teamwork&collaboration">
+      <div class="skill-item">
+        <div class="skill-label">Web Development</div>
+        <img src="img/web-development.png" alt="Web Development">
+      </div>
+      <div class="skill-item">
+        <div class="skill-label">Adaptability</div>
+        <img src="img/adaptability.png" alt="Adaptability">
+      </div>
+      <div class="skill-item">
+        <div class="skill-label">Time Management</div>
+        <img src="img/time-management.png" alt="Time Management">
+      </div>
+      <div class="skill-item">
+        <div class="skill-label">Communication Skills</div>
+        <img src="img/communication-skills.png" alt="Communication Skills">
+      </div>
+      <div class="skill-item">
+        <div class="skill-label">Teamwork & Collaboration</div>
+        <img src="img/teamwork&collaboration.png" alt="Teamwork & Collaboration">
+      </div>
     </div>
   </section>
+
 
   <section id="experience">
     <h2>🔹 Work Experience</h2>
